rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__time__tests__empty.snap
---
source: crates/rax-nmea/src/rules/time.rs
expression: result
---
Ok(
    (
        None,
        "foo,bar",
    ),
)
