rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__time__tests__invalid_minute.snap
---
source: crates/rax-nmea/src/rules/time.rs
expression: result
---
Err(
    RuleError {
        reason: "Failed to parse minute field.",
    },
)
