rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__time__tests__invalid_second_range.snap
---
source: crates/rax-nmea/src/rules/time.rs
expression: result
---
Err(
    RuleError {
        reason: "Missing second field.",
    },
)
