rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__time__tests__invalid_time.snap
---
source: crates/rax-nmea/src/rules/time.rs
expression: result
---
Err(
    RuleError {
        reason: "Failed to parse time field: parameter 'second' is not in the required range of 0..=59",
    },
)
