rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__time__tests__no_comma.snap
---
source: crates/rax-nmea/src/rules/time.rs
expression: result
---
Err(
    RuleError {
        reason: "Missing time string.",
    },
)
