rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__time__tests__no_fraction.snap
---
source: crates/rax-nmea/src/rules/time.rs
expression: result
---
Ok(
    (
        Some(
            23:59:59,
        ),
        "foo,bar",
    ),
)
