rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__time__tests__valid.snap
---
source: crates/rax-nmea/src/rules/time.rs
expression: result
---
Ok(
    (
        Some(
            12:34:56.789,
        ),
        "foo,bar",
    ),
)
